tests/ixml_not_018_ab.test
START
formula = first, second.
first = ~[], !'a'.
second = 'a' | 'b'.
INPUT
aa
OUTPUT
ixml(ixml:state = failed
     xmlns:ixml = http://invisiblexml.org/NS)
{
    info   = 'ixml:1:2: syntax error
              aa
               ^'
    line   = 1
    column = 2
    pos    = 2
}
END